
Change Log Update (00.00.39)
* 2016-04-14
+ Added both Initial SHA1 and PKCS5_PBKDF2 password encryption routines
+ Some more testing needed on c++ conversions of hex values.

Change Log Update (00.00.38)
* 2016-04-10
+ Update the ConfigDao object to update the smart pointer when loading the config file
  Modules now have access to the loaded values, might be able to switch this to copy/move
  constructor lateron, but looks good for now.
+ Added use_newuser_password and use_disclaimer to the config files for signup items.
  If they are enabled, they will be displayed and use in the signup process.
+ Update the menu system on command execution via ENTER and Hotkey to now execute the 
  command match the command key sequence.  The matrix menu is the test bed, and is now 
  kicking off the new user application when hitting A or ENTER on Apply for new.
+ Still working on the input handling for all of the signup fields now.

Change Log Update (00.00.37)
* 2016-04-06
+ Updated Modules.  Main will check and create a fresh config file if it doesn't exist.
  The config file is loaded one the menu system starts and is now passed through
  to each module for access.
+ Reordered the Detection phases.  Terminal options are detected, however they are now displayed
  after the Emulation is detected.
+ Work can now start on the New User Signup.

Change Log Update (00.00.36)
* 2016-04-05
+ Converted the Configuration to from Boost XML serialization to YAML
  Updated both the config.hpp and config_dao objects

Change Log Update (00.00.35)
* 2016-03-31
+ Added more code in SessionIO to check if ANSI emulations is not enabled, then 
  Ignore PIPE color codes in prompts and pipe2ansi replace methods.
+ Started working on Signup Module for New User Applications
  Finished a lot of the initial method stubs and virtual functions
  Working on prompts on key/value descriptions
  Added check for Disclaimer and new user password.